Add meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  
+  <title>Circular Menu (powered by Liwe)</title>
+  <meta name="description" content="Circular menu demo app controlled with Liwe">
+
   <link rel="stylesheet" href="style.css">
 
   <div class="controller">
