Add demo init and update metatags on index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
-  
-  <title>Circular Menu (powered by Liwe)</title>
-  <meta name="description" content="Circular menu demo app controlled with Liwe">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui" />
 
-  <link rel="stylesheet" href="style.css">
+  <title>Circular Menu (liwe demo)</title>
+  <meta name="description" content="Circular menu demo app controlled with Liwe" />
+
+  <link rel="stylesheet" href="style.css" />
 
   <div class="controller">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve" id="menu" class="circular-menu">
@@ -89,7 +92,8 @@
 
   <iframe id="frame" width="100%" height="100%" scrolling="no" frameborder="no" src=""></iframe>
 
-  <script charset="utf-8" src="//liwe.co/api/liwe.js"></script>
+  <script charset="utf-8" src="http://liwe.co/api/liwe.js"></script>
+  <script src="demoInit.js"></script>
   <script src="menu.js"></script>
   <script>
     var myMenu = new CircularMenu('menu'),
